@@ -71,6 +71,8 @@ o added libc replacements qgetservent, qgetservbyname, qgetservbyport along
     AUTH_SCRAM_SHA512_PLUS auth methods
 - 20/08/2022
 43. base/envdir.c: skip leading spaces, blank lines and comments in envfile
+- 23/08/2022
+44. base/authmethods.c: added get_authmethod function
 
 * Sat Jul 17 2021 18:14:37 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1-1.1%{?dist}
 Release 1.1 Start 14/02/2021
